fix layout issue with upload a file button and change the unep-wcmc logo

--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -227,7 +227,7 @@ body {
 #add-polygon,
 #add-circle,
 #upload-file {
-  margin: 10px 3px 10px 3px;
+  margin: 10px 2px 10px 2px;
   font-weight: normal;
   font-size: 12px;
 }
